fix css to stop page overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
     width: 100vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .app__main {
@@ -15,6 +17,7 @@
 }
 .main__characters {
     width: 100%;
+    max-height: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
